# nhl-rivalries

./: .gitignore  404.html  README.md  index.html  main.py  pyproject.toml
data/: .~lock.top50_fights.csv#  all_games.csv  fight_stats.csv  games_of_interest.csv  nhl-regular-all-fights.csv  top50_fights.csv
data/json/: 2024-09-21.json  2024-09-28.json  2024-10-05.json  2024-10-12.json  2024-10-19.json  2024-10-26.json  2024-11-02.json  2024-11-09.json  2024-11-16.json  2024-11-23.json  2024-11-30.json  2024-12-07.json  2024-12-14.json  2024-12-21.json  2024-12-28.json  2025-01-04.json  2025-01-11.json  2025-01-18.json  2025-01-25.json  2025-02-01.json  2025-02-08.json  2025-02-15.json  2025-02-22.json  2025-03-01.json  2025-03-08.json  2025-03-15.json  2025-03-22.json  2025-03-29.json  2025-04-05.json  2025-04-12.json
docs/: index.md
search/: search_index.json
site/search/: search_index.json
src/: fights.py  final_model.py  transforming.py  webscrapping.py
